# ChangeLog for sys-apps/pmount
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pmount/ChangeLog,v 1.23 2006/04/28 03:35:16 steev Exp $

*pmount-0.9.9 (28 Apr 2006)

  28 Apr 2006; Steev Klimaszewski <steev@gentoo.org> +pmount-0.9.9.ebuild:
  New upstream release of pmount.  Fixes some bugs with hal 0.5.7

  03 Feb 2006; Aron Griffis <agriffis@gentoo.org> pmount-0.9.6.ebuild:
  Mark 0.9.6 stable on ia64

  03 Feb 2006; Guy Martin <gmsoft@gentoo.org> pmount-0.9.6.ebuild:
  Stable on hppa.

  22 Jan 2006; Markus Rothe <corsair@gentoo.org> pmount-0.9.6.ebuild:
  Stable on ppc64

  22 Jan 2006; <dang@gentoo.org> pmount-0.9.6.ebuild:
  Marked stable on amd64 per bug #119634

  22 Jan 2006; Tobias Scherbaum <dertobi123@gentoo.org> pmount-0.9.6.ebuild:
  Marked ppc stable for bug #119634; Stabilize Gnome-2.12.2

  22 Jan 2006; Joshua Jackson <tsunam@gentoo.org> pmount-0.9.6.ebuild:
  Stable on x86 for bug #119634; Stabilize Gnome-2.12.2

  20 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> pmount-0.9.6.ebuild:
  Stable on sparc wrt #119634

  04 Jan 2006; Doug Goldstein <cardoe@gentoo.org> pmount-0.9.6.ebuild:
  Change sysfsutils dep to 1.3.0

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> pmount-0.9.6.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now.

  02 Nov 2005; Steev Klimaszewski <steev@gentoo.org> pmount-0.9.6.ebuild:
  CHANGES became ChangeLog.  Re-emerge if you really want to read the 
  file.  Not going to force a recompile for the ChangeLog

*pmount-0.9.6 (30 Oct 2005)

  30 Oct 2005; Steev Klimaszewski <steev@gentoo.org>
  -pmount-0.9.3-r3.ebuild, +pmount-0.9.6.ebuild:
  Version bump.  Doing this in Cardoe's absence with his permission.

  17 Oct 2005; Brent Baude <ranger@gentoo.org> pmount-0.9.3-r3.ebuild:
  Marking  pmount-0.9.3-r3 ~ppc64 for gnome-volume-manager dep

  25 Sep 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  pmount-0.9.3-r3.ebuild:
  Added to ~ppc
